--- a/src/pages/Projetos/Jogos/Projetos.css
+++ b/src/pages/Projetos/Jogos/Projetos.css
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
-  padding: 40px;
+  padding: 100px;
   margin-top: 100px;
   margin-bottom: 100px;
 }
@@ -41,4 +41,33 @@
 
 .project-card p {
   margin: 5px 0;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  gap: 20px; 
+  margin-top: 20px; 
+}
+
+.central-button button {
+  background-color: #9c27b0;
+  color: #ffffff;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.central-button button:hover {
+  transform: scale(1.1); 
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); 
+}
+
+.central-button {
+  text-decoration: none; 
+  margin-bottom: 10px;
 }
