--- a/src/pages/Projetos/Jogos/Jogos.css
+++ b/src/pages/Projetos/Jogos/Jogos.css
@@ -37,7 +37,7 @@ main {
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 60px;
   width: 100%; /* Garante que ocupe no máximo 100% */
   max-width: 800px; /* Define um limite para desktops */
 }
@@ -87,7 +87,8 @@ main {
   .project-description,
   .project-technologies,
   .project-images {
-    margin-top: 10px;
+    margin-top: 40px;
+    margin-bottom: 60px;
     padding: 10px;
   }
 }
