--- a/src/pages/Projetos/Jogos/Jogos.css
+++ b/src/pages/Projetos/Jogos/Jogos.css
@@ -29,7 +29,17 @@ main {
 }
 
 /* Estilo para as seções */
-.project-description,
+.project-description {
+  background-color: rgba(40, 40, 60, 0.9);
+  border: 1px solid #9c27b0;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  margin-top: 60px;
+  width: 100%; /* Garante que ocupe no máximo 100% */
+  max-width: 800px; /* Define um limite para desktops */
+}
+
 .project-technologies,
 .project-images {
   background-color: rgba(40, 40, 60, 0.9);
@@ -37,7 +47,6 @@ main {
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
-  margin-top: 60px;
   width: 100%; /* Garante que ocupe no máximo 100% */
   max-width: 800px; /* Define um limite para desktops */
 }
@@ -84,10 +93,14 @@ main {
     max-width: 100%;
   }
 
-  .project-description,
+  .project-description{
+    margin-top: 40px;
+    margin-bottom: 60px;
+    padding: 10px;
+  }
+
   .project-technologies,
   .project-images {
-    margin-top: 40px;
     margin-bottom: 60px;
     padding: 10px;
   }
